--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tanourine_app
-description: تطبيق تانورين لإدارة صيانة العدة والفواتير والدوام
+description: تطبيق تانورين لإدارة الصيانة والفواتير والدوام
 publish_to: 'none'
 version: 1.0.0+1
 
